fix header on mobile

--- a/inc/assets/sass/responsive.scss
+++ b/inc/assets/sass/responsive.scss
@@ -61,6 +61,7 @@
 		.white-line{
 			width: 100%;
 			border-bottom: 5px solid #fff;
+			margin: 0;
 		}
 	}
 	.single-author-article-swiper-section{
